# Digital-Twin-Server

./: .gitignore  CMakeLists.txt  README.md
include/: MvCamera.h  contour.h  converter.h  detector.h  image_process.h  mainwindow.h  opencv_headers.h  tcp_messager.h
src/: MvCamera.cpp  contour.cpp  converter.cpp  detector.cpp  image_process.cpp  main.cpp  mainwindow.cpp  tcp_messager.cpp
ui/: mainwindow.ui
